# codicle

./: .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
client/: README.md  package.json  webpack.config.js
client/screen-capture/: index.d.ts  test.mjs
client/screen-capture/npm/android-arm64/: README.md  package.json
client/screen-capture/npm/darwin-universal/: README.md
client/screen-capture/npm/linux-arm-gnueabihf/: README.md
client/screen-capture/src/: lib.rs
client/src/: WebViewPanel.ts  extension.ts
client/src/webview/: index.html  index.ts
rs/: Cargo.toml  index.d.ts  index_static.js  package.json  test.mjs
rs/npm/darwin-universal/: package.json
rs/npm/darwin-x64/: package.json
rs/npm/freebsd-x64/: package.json
rs/npm/linux-arm64-gnu/: package.json
rs/npm/linux-arm64-musl/: package.json
rs/npm/linux-riscv64-gnu/: README.md  package.json
rs/npm/linux-x64-gnu/: README.md  package.json
rs/npm/linux-x64-musl/: package.json
rs/npm/win32-arm64-msvc/: README.md  package.json
rs/npm/win32-x64-msvc/: README.md
rs/src/: lib.rs
screen-capture/: index.js  package-lock.json
screen-capture/npm/darwin-x64/: README.md
screen-capture/npm/freebsd-x64/: README.md
screen-capture/npm/linux-arm-gnueabihf/: package.json
screen-capture/npm/win32-x64-msvc/: package.json
server/: clients.ts  server.ts
shared/: NetEvents.ts
src/: MultiWebViewProvider.ts  WebViewPanel.ts  WebViewProvider.ts  extension.ts
src/webview/: index.css  index.html  index.ts
src/webview/assets/: stickman.glb
(+9 files in other folders)
